--- a/k3s-manifests/ingress/app-ingress.yaml
+++ b/k3s-manifests/ingress/app-ingress.yaml
@@ -7,8 +7,9 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
-    kubernetes.io/spec.ingressClassName: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
 spec:
+  ingressClassName: traefik
   tls:
     - hosts:
         - query-forge-dev.ualtarh.com # frontend
@@ -30,7 +31,7 @@ spec:
               service:
                 name: frontend-service
                 port:
-                  number: 80
+                  number: 4444
 
     # API Backend
     - host: api.ualtarh.com
