--- a/k3s-manifests/ingress/monitoring-ingress.yaml
+++ b/k3s-manifests/ingress/monitoring-ingress.yaml
@@ -7,8 +7,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
-    kubernetes.io/spec.ingressClassName: traefik
 spec:
+  ingressClassName: traefik
   tls:
     - hosts:
         - grafana.ualtarh.com
