--- a/proxmox/ansible/playbook.yml
+++ b/proxmox/ansible/playbook.yml
@@ -1,3 +1,12 @@
+- name: Install common packages (Git and Docker) on all VMs
+  hosts: all
+  become: true
+  vars_files:
+    - group_vars/all/vault.yml
+
+  roles:
+    - common
+
 - name: Install K3s on master
   hosts: master
   become: true
