--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+worker_processes 1;
+
 events {
     worker_connections 1024;
 }
@@ -5,213 +7,112 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-    
-    # Configuration du load balancer
+
     upstream frontend {
-        server frontend:3000;
+        server frontend:4444;
     }
-    
-    upstream nestjs {
+
+    upstream backend {
         server nestjs:3000;
     }
-    
-    upstream auth-service {
+
+    upstream auth {
         server auth-service:4000;
     }
-    
-    upstream agent-ia-service {
-        server agent-ia-service:5000;
+
+    upstream agent {
+        server agent-ia-service:8088;
     }
-    
-    upstream scraping-service {
-        server scraping-service:6000;
+
+    upstream scraping {
+        server scraping-service:3001;
     }
-    
+
+    upstream adminer {
+        server adminer:8080;
+    }
+
     upstream kibana {
         server kibana:5601;
     }
-    
-    # Configuration des logs
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
-    
-    # Configuration générale
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    
-    # Configuration SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers on;
-    
-    # Configuration Gzip
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    
-    # Health check endpoint
+
     server {
         listen 80;
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-    }
-    
-    # Redirection HTTP vers HTTPS pour tous les domaines
-    server {
-        listen 80;
-        server_name query-forge-dev.ualtarh.com api.ualtarh.com auth.ualtarh.com agent.ualtarh.com scraping.ualtarh.com adminer.ualtarh.com kibana.ualtarh.com;
-        return 301 https://$server_name$request_uri;
-    }
-    
-    # Frontend - query-forge-dev.ualtarh.com
-    server {
-        listen 443 ssl http2;
         server_name query-forge-dev.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_read_timeout 30s;
-            proxy_send_timeout 30s;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # ← Ajoutez ceci
+            # proxy_set_header X-Forwarded-Proto $scheme;                   # ← Ajoutez ceci
+            # proxy_set_header X-Forwarded-Host $server_name;
         }
     }
-    
-    # NestJS API - api.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name api.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
-            proxy_pass http://nestjs;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_read_timeout 30s;
-            proxy_send_timeout 30s;
         }
     }
-    
-    # Auth Service - auth.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name auth.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
-            proxy_pass http://auth-service;
+            proxy_pass http://auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_read_timeout 30s;
-            proxy_send_timeout 30s;
         }
     }
-    
-    # Agent IA Service - agent.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name agent.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
-            proxy_pass http://agent-ia-service;
+            proxy_pass http://agent;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 60s;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
         }
     }
-    
-    # Scraping Service - scraping.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name scraping.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
-            proxy_pass http://scraping-service;
+            proxy_pass http://scraping;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 60s;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
         }
     }
-    
-    # Adminer - adminer.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name adminer.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
-            proxy_pass http://adminer:8080;
+            proxy_pass http://adminer;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_read_timeout 30s;
-            proxy_send_timeout 30s;
         }
     }
-    
-    # Kibana - kibana.ualtarh.com
+
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name kibana.ualtarh.com;
-        
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        
+
         location / {
             proxy_pass http://kibana;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_read_timeout 30s;
-            proxy_send_timeout 30s;
         }
     }
 }
