--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -4,18 +4,20 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - target: 80
-        published: 80
-        protocol: tcp
-        mode: host
+      - "80:80" # Mode ingress par défaut, pas host
     networks:
       - proxy
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     deploy:
+      replicas: 1
       placement:
         constraints:
           - node.role == manager
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
 
   postgres:
     image: postgres:17.4
@@ -29,6 +31,9 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     deploy:
       replicas: 1
+      restart_policy:
+        condition: any
+        delay: 10s
 
   nestjs:
     image: mathieuvss/query-forge-nestjs:latest
@@ -54,6 +59,12 @@ services:
       - FRONTEND_URL=${FRONTEND_URL}
     deploy:
       replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
+    depends_on:
+      - postgres
+      - elasticsearch
 
   adminer:
     image: adminer:latest
@@ -64,6 +75,8 @@ services:
       - postgres
     deploy:
       replicas: 1
+      restart_policy:
+        condition: any
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0
@@ -71,12 +84,19 @@ services:
       - discovery.type=${EL_DISCOVERY_TYPE}
       - ES_JAVA_OPTS=${ES_JAVA_OPTS}
       - xpack.security.enabled=false
+      - bootstrap.memory_lock=true
     volumes:
       - esdata:/usr/share/elasticsearch/data
     networks:
       - internal
     deploy:
       replicas: 1
+      resources:
+        limits:
+          memory: 2G
+      restart_policy:
+        condition: any
+        delay: 10s
 
   kibana:
     image: docker.elastic.co/kibana/kibana:9.0.0
@@ -89,6 +109,9 @@ services:
       - internal
     deploy:
       replicas: 1
+      restart_policy:
+        condition: any
+        delay: 10s
 
   agent-ia-service:
     image: mathieuvss/agent-ia-service:latest
@@ -107,6 +130,11 @@ services:
       - JWT_SECRET=${JWT_SECRET}
     deploy:
       replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
+    depends_on:
+      - elasticsearch
 
   auth-service:
     image: mathieuvss/auth-service:latest
@@ -135,6 +163,9 @@ services:
       - postgres
     deploy:
       replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
 
   scraping-service:
     image: mathieuvss/scraping-service:latest
@@ -150,10 +181,11 @@ services:
     cap_add:
       - SYS_ADMIN
     init: true
-    security_opt:
-      - seccomp:unconfined
     deploy:
       replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
 
   sync-service:
     image: mathieuvss/sync-service:latest
@@ -163,20 +195,24 @@ services:
       - proxy
       - internal
     environment:
-      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_HOST=postgres # Utilisez postgres, pas ${POSTGRES_HOST}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_PORT=5432 # Port par défaut
       - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
       - APIFY_API_TOKEN=${APIFY_API_TOKEN}
       - SCRAPER_SERVICE_URL=${SCRAPER_SERVICE_URL}
       - SYNC_PORT=${SYNC_PORT}
     deploy:
+      replicas: 1
       restart_policy:
         condition: on-failure
-      replicas: 1
+        delay: 10s
+    depends_on:
+      - postgres
+      - elasticsearch
 
   frontend:
     image: mathieuvss/query-forge-frontend:latest
@@ -194,10 +230,15 @@ services:
       - AGENT_IA_HOST=${AGENT_IA_HOST}
     deploy:
       replicas: 1
+      restart_policy:
+        condition: any
+        delay: 10s
 
 volumes:
   postgres-query-forge-dev:
+    driver: local
   esdata:
+    driver: local
 
 networks:
   proxy:
