--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
@@ -8,6 +8,18 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Configuration de base
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    # Logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Upstreams
     upstream frontend {
         server frontend:4444;
     }
@@ -36,6 +48,12 @@ http {
         server kibana:5601;
     }
 
+    # Configuration commune pour les proxies
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_cache_bypass $http_upgrade;
+
     server {
         listen 80;
         server_name query-forge-dev.ualtarh.com;
@@ -44,9 +62,14 @@ http {
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # ← Ajoutez ceci
-            # proxy_set_header X-Forwarded-Proto $scheme;                   # ← Ajoutez ceci
-            # proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+            
+            # Timeout plus long pour le développement
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
     }
 
@@ -58,6 +81,11 @@ http {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Pour les API
+            client_max_body_size 50M;
         }
     }
 
@@ -69,6 +97,8 @@ http {
             proxy_pass http://auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
@@ -80,6 +110,12 @@ http {
             proxy_pass http://agent;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support pour l'agent IA
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 
@@ -91,6 +127,13 @@ http {
             proxy_pass http://scraping;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeout plus long pour le scraping
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
         }
     }
 
@@ -102,6 +145,8 @@ http {
             proxy_pass http://adminer;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
@@ -113,6 +158,13 @@ http {
             proxy_pass http://kibana;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Kibana a besoin de timeouts plus longs
+            proxy_connect_timeout 90s;
+            proxy_send_timeout 90s;
+            proxy_read_timeout 90s;
         }
     }
 }
