add things for mapa server

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,9 +54,24 @@ http {
     proxy_set_header Connection 'upgrade';
     proxy_cache_bypass $http_upgrade;
 
+    # Redirection HTTP vers HTTPS
     server {
         listen 80;
-        server_name query-forge-dev.ualtarh.com;
+        server_name query-forge-dev.mapa-server.org api.mapa-server.org auth.mapa-server.org agent.mapa-server.org scraping.mapa-server.org adminer.mapa-server.org kibana.mapa-server.org;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Frontend HTTPS
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name query-forge-dev.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://frontend;
@@ -73,9 +88,14 @@ http {
         }
     }
 
+    # API HTTPS
     server {
-        listen 80;
-        server_name api.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name api.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://backend;
@@ -89,9 +109,14 @@ http {
         }
     }
 
+    # Auth HTTPS
     server {
-        listen 80;
-        server_name auth.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name auth.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://auth;
@@ -102,9 +127,14 @@ http {
         }
     }
 
+    # Agent IA HTTPS
     server {
-        listen 80;
-        server_name agent.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name agent.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://agent;
@@ -119,9 +149,14 @@ http {
         }
     }
 
+    # Scraping HTTPS
     server {
-        listen 80;
-        server_name scraping.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name scraping.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://scraping;
@@ -137,9 +172,14 @@ http {
         }
     }
 
+    # Adminer HTTPS
     server {
-        listen 80;
-        server_name adminer.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name adminer.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://adminer;
@@ -150,9 +190,14 @@ http {
         }
     }
 
+    # Kibana HTTPS
     server {
-        listen 80;
-        server_name kibana.ualtarh.com;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name kibana.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
 
         location / {
             proxy_pass http://kibana;
