--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -4,11 +4,13 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "80:80" # Mode ingress par défaut, pas host
+      - "80:80"
+      - "443:443"
     networks:
       - proxy
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certs:/etc/ssl:ro # Volume pour les certificats SSL
     deploy:
       replicas: 1
       restart_policy:
