--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -206,6 +206,10 @@ services:
       - NEST_BASE_URL=${NEST_LOCAL_URL}
       - SCRAPER_LOCAL_URL=${SCRAPER_LOCAL_URL}
       - AGENT_IA_HOST=${AGENT_IA_HOST}
+      - NUXT_PUBLIC_AI_API_URL=${NUXT_PUBLIC_AI_API_URL}
+      - NUXT_PUBLIC_NEST_BASE_URL=${NUXT_PUBLIC_NEST_BASE_URL}
+      - NUXT_PUBLIC_AUTH_BASE_URL=${NUXT_PUBLIC_AUTH_BASE_URL}
+      - NUXT_PUBLIC_SCRAPER_URL=${NUXT_PUBLIC_SCRAPER_URL}
     deploy:
       replicas: 1
       restart_policy:
