--- a/nginx.conf
+++ b/nginx.conf
@@ -57,7 +57,7 @@ http {
     # Redirection HTTP vers HTTPS
     server {
         listen 80;
-        server_name query-forge-dev.mapa-server.org api.mapa-server.org auth.mapa-server.org agent.mapa-server.org scraping.mapa-server.org adminer.mapa-server.org kibana.mapa-server.org;
+        server_name query-forge-dev.mapa-server.org api.mapa-server.org auth.mapa-server.org agent.mapa-server.org scraping.mapa-server.org adminer.mapa-server.org kibana.mapa-server.org prometheus.mapa-server.org grafana.mapa-server.org;
 
         location / {
             return 301 https://$host$request_uri;
@@ -210,6 +210,42 @@ http {
             proxy_connect_timeout 90s;
             proxy_send_timeout 90s;
             proxy_read_timeout 90s;
+        }
+    }
+
+    # Prometheus HTTPS
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name prometheus.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
+
+        location / {
+            proxy_pass http://prometheus:9090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Grafana HTTPS
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name grafana.mapa-server.org;
+
+        ssl_certificate /etc/ssl/cert.pem;
+        ssl_certificate_key /etc/ssl/key.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
