--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+./certs
+./contents_bulk.json
 # Logs
 logs
 *.log
@@ -6,6 +8,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
